--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -6,10 +6,22 @@ edition = "2021"
 [[example]]
 name = "svg_small_binary"
 path = "svg_small_binary.rs"
+required-features = ["svg"]
 
 [[example]]
 name = "svg_large_binary"
 path = "svg_large_binary.rs"
+required-features = ["svg", "names"]
+
+[[example]]
+name = "png_small_binary"
+path = "png_small_binary.rs"
+required-features = ["png"]
+
+[[example]]
+name = "png_large_binary"
+path = "png_large_binary.rs"
+required-features = ["png", "names"]
 
 [dependencies]
 twemoji-assets = { path = "../." }
