--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "examples"
-version = "0.1.0+14.0.2"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
 
 [[example]]
 name = "svg_small_binary"
