--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "tests"
-version = "0.1.0+14.0.2"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
 
 [[test]]
 name = "svg"
