--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ keywords = ["twitter", "emoji", "twemoji", "assets"]
 categories = ["graphics", "value-formatting"]
 edition.workspace = true
 description = "A sophisticated crate that provides the assets from Twemoji."
+license = "MIT"
 exclude = [
     ".gitignore",
     "Cargo.lock",
